Standardize Header Height; Fixed Gap between Page and Header

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,13 +2,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Poiret+One&family=Quicksand:wght@300..700&display=swap');
 
 :root {
-    --header-height: calc(88px + 4rem);
-    --mobile-header-height: calc(62px + 3rem);
+    --header-height: 152px;
+    --mobile-header-height: 110px;
     --footer-height: 18vh;
     --mobile-footer-height: 30vh;
 }
 
 body {
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
     background-color: #fcefed;
