--- a/client/src/pages/ContactUs.css
+++ b/client/src/pages/ContactUs.css
@@ -10,6 +10,7 @@
     justify-content: flex-end;
     height: calc(100vh - var(--header-height) - var(--footer-height));
     position: relative;
+    overflow: hidden;
 }
 
 .contact-us-page .text-area {
